--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,9 @@
 version: 2
 
 build:
-  image: testing
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
 
 conda:
   environment: doc/environment.yml
@@ -14,6 +16,5 @@ formats:
   - epub
 
 python:
-  version: "3.8"
   install:
   - requirements: doc/requirements.txt
