Let's not forget this new header file cref_wrapper.hpp

--- a/include/mdds/Makefile.am
+++ b/include/mdds/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = multi_type_vector
 headersdir = $(includedir)/mdds-@API_VERSION@/mdds
 
 headers_HEADERS = \
+	cref_wrapper.hpp \
 	flat_segment_tree_def.inl \
 	flat_segment_tree.hpp \
 	flat_segment_tree_itr.hpp \
