--- a/test/trie_map/CMakeLists.txt
+++ b/test/trie_map/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(trie-map-test-main EXCLUDE_FROM_ALL
     test_main.cpp
+    test_state.cpp
 )
 
 target_link_libraries(trie-map-test-main PRIVATE test-global)
