--- a/test/trie_map/Makefile.am
+++ b/test/trie_map/Makefile.am
@@ -7,6 +7,7 @@ check_PROGRAMS = test-main
 
 test_main_SOURCES = \
 	test_main.cpp \
+	test_state.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 TESTS = test-main
