Move a test case involving move-only value type to a separate cpp

--- a/test/segment_tree/CMakeLists.txt
+++ b/test/segment_tree/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(segment-tree-test-main EXCLUDE_FROM_ALL
     test_main.cpp
+    test_move_value.cpp
 )
 
 target_link_libraries(segment-tree-test-main PRIVATE test-global)
