--- a/test/segment_tree/Makefile.am
+++ b/test/segment_tree/Makefile.am
@@ -6,7 +6,9 @@ AM_CPPFLAGS = \
 check_PROGRAMS = test-main
 
 test_main_SOURCES = \
+	test_main.hpp \
 	test_main.cpp \
+	test_move_value.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 TESTS = test-main
