--- a/test/trie_map/CMakeLists.txt
+++ b/test/trie_map/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(trie-map-test-main EXCLUDE_FROM_ALL
     test_main.cpp
     test_state.cpp
     test_node.cpp
+    test_move_value.cpp
 )
 
 target_link_libraries(trie-map-test-main PRIVATE test-global)
