--- a/test/trie_map/Makefile.am
+++ b/test/trie_map/Makefile.am
@@ -9,6 +9,7 @@ test_main_SOURCES = \
 	test_main.cpp \
 	test_state.cpp \
 	test_node.cpp \
+	test_move_value.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 TESTS = test-main
