Throw an exception during packing when it exceed max allowed value count

--- a/test/trie_map/CMakeLists.txt
+++ b/test/trie_map/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(trie-map-test-main EXCLUDE_FROM_ALL
     test_state.cpp
     test_node.cpp
     test_move_value.cpp
+    test_pack_value_type.cpp
 )
 
 target_link_libraries(trie-map-test-main PRIVATE test-global)
