Add doc-open and doc-clean targets

--- a/Makefile.am
+++ b/Makefile.am
@@ -88,6 +88,12 @@ doc-sphinx:
 
 doc: doc-doxygen doc-sphinx
 
+doc-open:
+	@xdg-open ./doc/_build/index.html
+
+doc-clean:
+	@rm -rf ./doc/_build ./doc/_doxygen
+
 endif
 
 check-gdb:
