--- a/Makefile.am
+++ b/Makefile.am
@@ -17,55 +17,73 @@ EXTRA_DIST = \
 	autogen.sh \
 	CHANGELOG \
 	LICENSE \
+	doc/_static/images/fst-example1-initial.svg \
+	doc/_static/images/fst-example1-insert1.svg \
+	doc/_static/images/fst-example1-insert2.svg \
+	doc/_static/images/mtv-block-structure.svg \
+	doc/_static/images/mtv_collection_sheet.png \
+	doc/_static/images/rtree_bounds2_tree.png \
+	doc/_static/images/rtree_bounds2_tree_bulkload.png \
+	doc/_static/images/rtree_bounds_src.png \
+	doc/_static/images/rtree_bounds_tree.png \
+	doc/api.rst \
 	doc/conf.py \
 	doc/doxygen.conf \
-	doc/point_quad_tree.rst \
-	doc/rtree.rst \
-	doc/api.rst \
-	doc/index.rst \
-	doc/flat_segment_tree.rst \
-	doc/segment_tree.rst \
-	doc/multi_type_matrix.rst \
-	doc/trie_map.rst \
-	doc/sorted_string_map.rst \
+	doc/environment.yml \
+	doc/figures.odg \
+	doc/flat_segment_tree/api.rst \
+	doc/flat_segment_tree/index.rst \
+	doc/flat_segment_tree/iterate-segments.rst \
+	doc/flat_segment_tree/quickstart.rst \
 	doc/global.rst \
-	doc/multi_type_vector/index.rst \
-	doc/multi_type_vector/examples.rst \
+	doc/index.rst \
+	doc/multi_type_matrix.rst \
 	doc/multi_type_vector/api-ref.rst \
-	doc/_static/images/mtv-block-structure.svg \
-	doc/_static/images/rtree_bounds_src.png \
-	doc/_static/images/mtv_collection_sheet.png \
-	doc/_static/images/rtree_bounds2_tree_bulkload.png \
-	doc/_static/images/rtree_bounds2_tree.png \
-	doc/_static/images/fst-example1-initial.svg \
-	doc/_static/images/fst-example1-insert2.svg \
-	doc/_static/images/rtree_bounds_tree.png \
-	doc/_static/images/fst-example1-insert1.svg \
-	example/rtree_simple.cpp \
-	example/packed_trie_state_int.cpp \
-	example/multi_type_matrix.cpp \
-	example/rtree_erase.cpp \
-	example/packed_trie_map.cpp \
-	example/trie_map.cpp \
-	example/rtree_medium_bulkload.cpp \
-	example/packed_trie_state_custom.cpp \
-	example/segment_tree.cpp \
-	example/point_quad_tree.cpp \
+	doc/multi_type_vector/examples.rst \
+	doc/multi_type_vector/index.rst \
+	doc/point_quad_tree.rst \
+	doc/requirements.txt \
+	doc/rtree.rst \
+	doc/segment_tree/api.rst \
+	doc/segment_tree/index.rst \
+	doc/segment_tree/perf.rst \
+	doc/segment_tree/quickstart.rst \
+	doc/segment_tree/remove-segments.rst \
+	doc/sorted_string_map/api.rst \
+	doc/sorted_string_map/index.rst \
+	doc/sorted_string_map/quickstart.rst \
+	doc/trie_map.rst \
+	example/.gitignore \
+	example/Makefile.am \
+	example/flat_segment_tree.cpp \
 	example/flat_segment_tree_itrs.cpp \
-	example/multi_type_vector/pos_hint.cpp \
+	example/multi_type_matrix.cpp \
+	example/multi_type_vector/.gitignore \
+	example/multi_type_vector/Makefile.am \
 	example/multi_type_vector/basic.cpp \
-	example/multi_type_vector/debug_trace.cpp \
 	example/multi_type_vector/custom_value_types.cpp \
 	example/multi_type_vector/custom_value_types_custom_store.cpp \
-	example/multi_type_vector/mtv_collection.cpp \
-	example/multi_type_vector/standard_custom_store.cpp \
-	example/multi_type_vector/event1.cpp \
+	example/multi_type_vector/debug_trace.cpp \
 	example/multi_type_vector/element_block1.cpp \
+	example/multi_type_vector/event1.cpp \
+	example/multi_type_vector/mtv_collection.cpp \
+	example/multi_type_vector/pos_hint.cpp \
+	example/multi_type_vector/standard_custom_store.cpp \
+	example/packed_trie_map.cpp \
+	example/packed_trie_state_custom.cpp \
+	example/packed_trie_state_int.cpp \
+	example/point_quad_tree.cpp \
+	example/rtree_erase.cpp \
 	example/rtree_medium.cpp \
-	example/flat_segment_tree.cpp \
+	example/rtree_medium_bulkload.cpp \
+	example/rtree_simple.cpp \
+	example/segment_tree.cpp \
+	example/sorted_string_map.cpp \
+	example/trie_map.cpp \
 	misc/gdb/mdds/__init__.py \
 	misc/matrix_perf.cpp \
 	misc/mdds.pc.in \
+	misc/sorted_string_data.dat \
 	misc/sorted_string_map_perf.cpp
 
 install-data-local:
