Set up test cases for copy and move variants of push_back()

--- a/configure.ac
+++ b/configure.ac
@@ -160,6 +160,10 @@ test/multi_type_vector/event/aos/Makefile
 test/multi_type_vector/event/soa/Makefile
 test/multi_type_vector/event/tc/Makefile
 test/multi_type_vector/perf/Makefile
+test/multi_type_vector/push-emplace-back/Makefile
+test/multi_type_vector/push-emplace-back/aos/Makefile
+test/multi_type_vector/push-emplace-back/soa/Makefile
+test/multi_type_vector/push-emplace-back/tc/Makefile
 test/point_quad_tree/Makefile
 test/rtree/Makefile
 test/segment_tree/Makefile
