--- a/test/multi_type_vector/Makefile.am
+++ b/test/multi_type_vector/Makefile.am
@@ -1,1 +1,10 @@
-SUBDIRS = collection custom custom-trait debug-util default element-blocks event perf
+SUBDIRS = \
+	collection \
+	custom \
+	custom-trait \
+	debug-util \
+	default \
+	element-blocks \
+	event \
+	perf \
+	push-emplace-back
