--- a/test/multi_type_vector/CMakeLists.txt
+++ b/test/multi_type_vector/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(debug-util)
 add_subdirectory(element-blocks)
 add_subdirectory(event)
 add_subdirectory(perf)
+add_subdirectory(push-emplace-back)
