Implement clone() method for both aos and soa variants
The clone() method will allow copying of non-copyable element blocks
if the caller provides specializations for mdds::mtv::clone_value
for the value types of the blocks being cloned.

Test cases will follow.

--- a/configure.ac
+++ b/configure.ac
@@ -171,6 +171,7 @@ test/sorted_string_map/Makefile
 test/trie_map/Makefile
 tools/Makefile
 tools/runtime-env/Makefile
+misc/Makefile
 misc/mdds-$API_VERSION.pc:misc/mdds.pc.in
 ])
 AC_OUTPUT
