Add test case for multi_type_vector::clone()

--- a/configure.ac
+++ b/configure.ac
@@ -137,6 +137,10 @@ test/flat_segment_tree/Makefile
 test/include/Makefile
 test/multi_type_matrix/Makefile
 test/multi_type_vector/Makefile
+test/multi_type_vector/clone/Makefile
+test/multi_type_vector/clone/aos/Makefile
+test/multi_type_vector/clone/soa/Makefile
+test/multi_type_vector/clone/tc/Makefile
 test/multi_type_vector/collection/Makefile
 test/multi_type_vector/collection/aos/Makefile
 test/multi_type_vector/collection/soa/Makefile
