--- a/test/multi_type_vector/CMakeLists.txt
+++ b/test/multi_type_vector/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_subdirectory(default)
+add_subdirectory(clone)
 add_subdirectory(collection)
 add_subdirectory(custom)
 add_subdirectory(custom-trait)
