--- a/test/multi_type_vector/clone/soa/CMakeLists.txt
+++ b/test/multi_type_vector/clone/soa/CMakeLists.txt
@@ -3,6 +3,7 @@ set(TARGET_NAME ${TEST_NAME})
 
 add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL
     test_main.cpp
+    test_clone.cpp
 )
 
 target_link_libraries(${TARGET_NAME} PUBLIC test-global)
