Have the new test cases also build in CMake

--- a/test/multi_type_vector/CMakeLists.txt
+++ b/test/multi_type_vector/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(custom-trait)
 add_subdirectory(debug-util)
 add_subdirectory(element-blocks)
 add_subdirectory(event)
+add_subdirectory(exec-policy)
 add_subdirectory(perf)
 add_subdirectory(push-emplace-back)
