Add example on custom execution policy

--- a/example/multi_type_vector/Makefile.am
+++ b/example/multi_type_vector/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_PROGRAMS = \
 	custom-value-types-custom-store \
 	debug-trace \
 	element-block1 \
+	exec-policy \
 	standard-custom-store \
 	event1 \
 	pos-hint
@@ -20,6 +21,13 @@ custom_value_types_SOURCES = custom_value_types.cpp
 custom_value_types_custom_store_SOURCES = custom_value_types_custom_store.cpp
 debug_trace_SOURCES = debug_trace.cpp
 element_block1_SOURCES = element_block1.cpp
+
+exec_policy_SOURCES = exec_policy.cpp
+exec_policy_CPPFLAGS = \
+	$(AM_CPPFLAGS) \
+	$(TBB_CFLAGS)
+exec_policy_LDADD = $(TBB_LIBS)
+
 standard_custom_store_SOURCES = standard_custom_store.cpp
 event1_SOURCES = event1.cpp
 pos_hint_SOURCES = pos_hint.cpp
@@ -32,6 +40,7 @@ TESTS = \
 	custom-value-types-custom-store \
 	debug-trace \
 	element-block1 \
+	exec-policy \
 	standard-custom-store \
 	event1 \
 	pos-hint
