Add -Wextra and fix warning-as-error
It fixes the following:

> ../include/mdds/trie_map_itr.hpp:546:12: error: type qualifiers ignored on function return type [-Werror=ignored-qualifiers]
>   546 |     static const void descend_to_previous_leaf_node(node_stack_type& node_stack, key_type& buf)
>       |            ^~~~~

--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_SUBST(MISCDIR)
 
 AX_CXX_COMPILE_STDCXX_17([noext], [mandatory])
 
-CPPFLAGS="$CPPFLAGS -Wall -Wshadow -g -pedantic-errors"
+CPPFLAGS="$CPPFLAGS -Wall -Wextra -Wshadow -g -pedantic-errors"
 CPPFLAGS="$CPPFLAGS -I/usr/include -I/usr/local/include"
 
 AC_CHECK_SIZEOF([void *])
@@ -195,6 +195,7 @@ Build configuration:
         sanitizer-coverage    $enable_sanitizer_coverage
         loop-unrolling        $enable_loop_unrolling
 
+        CPPFLAGS              $CPPFLAGS
         CXXFLAGS              $CXXFLAGS
         TBB_CFLAGS            $TBB_CFLAGS
         TBB_LIBS              $TBB_LIBS
