--- a/test/multi_type_vector/custom-trait/Makefile.am
+++ b/test/multi_type_vector/custom-trait/Makefile.am
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
+
 SUBDIRS = aos soa
 
 EXTRA_DIST = tc/loop_unrolling.inl
