--- a/test/multi_type_vector/clone/soa/Makefile.am
+++ b/test/multi_type_vector/clone/soa/Makefile.am
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
+
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/test/include \
