--- a/test/multi_type_vector/event/tc/Makefile.am
+++ b/test/multi_type_vector/event/tc/Makefile.am
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
+
 EXTRA_DIST = \
 	block_counter.inl  \
 	block_init.inl \
