--- a/test/multi_type_vector/debug-util/soa/CMakeLists.txt
+++ b/test/multi_type_vector/debug-util/soa/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
+
 set(TEST_NAME multi-type-vector-debug-util-soa-trace)
 set(TARGET_NAME ${TEST_NAME})
 
