--- a/test/multi_type_vector/exec-policy/CMakeLists.txt
+++ b/test/multi_type_vector/exec-policy/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
 
 # not yet implemented in aos
 add_subdirectory(soa)
