--- a/test/segment_tree/CMakeLists.txt
+++ b/test/segment_tree/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
 
 add_executable(segment-tree-test-main EXCLUDE_FROM_ALL
     test_main.cpp
