--- a/test/sorted_string_map/CMakeLists.txt
+++ b/test/sorted_string_map/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Kohei Yoshida
+#
+# SPDX-License-Identifier: MIT
+
 set(TEST_NAME sorted-string-map-test)
 set(TARGET_NAME ${TEST_NAME})
 
