Fix make distcheck

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-SUBDIRS = include example test tools
+SUBDIRS = include example misc test tools
 
 pkgconfdir = $(datarootdir)/pkgconfig
 
@@ -22,19 +22,29 @@ EXTRA_DIST = \
 	CHANGELOG \
 	LICENSE \
 	doc/_static/images/fst-example1-initial.svg \
+	doc/_static/images/fst-example1-initial.svg.license \
 	doc/_static/images/fst-example1-insert1.svg \
+	doc/_static/images/fst-example1-insert1.svg.license \
 	doc/_static/images/fst-example1-insert2.svg \
+	doc/_static/images/fst-example1-insert2.svg.license \
 	doc/_static/images/mtv-block-structure.svg \
+	doc/_static/images/mtv-block-structure.svg.license \
 	doc/_static/images/mtv_collection_sheet.png \
+	doc/_static/images/mtv_collection_sheet.png.license \
 	doc/_static/images/rtree_bounds2_tree.png \
+	doc/_static/images/rtree_bounds2_tree.png.license \
 	doc/_static/images/rtree_bounds2_tree_bulkload.png \
+	doc/_static/images/rtree_bounds2_tree_bulkload.png.license \
 	doc/_static/images/rtree_bounds_src.png \
+	doc/_static/images/rtree_bounds_src.png.license \
 	doc/_static/images/rtree_bounds_tree.png \
+	doc/_static/images/rtree_bounds_tree.png.license \
 	doc/api.rst \
 	doc/conf.py \
 	doc/doxygen.conf \
 	doc/environment.yml \
 	doc/figures.odg \
+	doc/figures.odg.license \
 	doc/flat_segment_tree/api.rst \
 	doc/flat_segment_tree/index.rst \
 	doc/flat_segment_tree/iterate-segments.rst \
@@ -43,8 +53,19 @@ EXTRA_DIST = \
 	doc/index.rst \
 	doc/multi_type_matrix.rst \
 	doc/multi_type_vector/api-ref.rst \
-	doc/multi_type_vector/examples.rst \
+	doc/multi_type_vector/debugging.rst \
+	doc/multi_type_vector/examples/cloning.rst \
+	doc/multi_type_vector/examples/custom-value-types-custom-store.rst \
+	doc/multi_type_vector/examples/custom-value-types.rst \
+	doc/multi_type_vector/examples/event-handlers.rst \
+	doc/multi_type_vector/examples/exec-policy.rst \
+	doc/multi_type_vector/examples/index.rst \
+	doc/multi_type_vector/examples/pointer-to-elem.rst \
+	doc/multi_type_vector/examples/quickstart.rst \
+	doc/multi_type_vector/examples/standard-elem-custom-store.rst \
+	doc/multi_type_vector/examples/traverse-sideways.rst \
 	doc/multi_type_vector/index.rst \
+	doc/multi_type_vector/perf-considerations.rst \
 	doc/point_quad_tree.rst \
 	doc/requirements.txt \
 	doc/rtree/api.rst \
@@ -68,35 +89,14 @@ EXTRA_DIST = \
 	doc/trie_map/populate-trie-map.rst \
 	doc/trie_map/save-load-packed-trie-map-custom-value.rst \
 	doc/trie_map/save-load-packed-trie-map.rst \
-	example/Makefile.am \
-	example/flat_segment_tree.cpp \
-	example/flat_segment_tree_itrs.cpp \
-	example/multi_type_matrix.cpp \
-	example/multi_type_vector/Makefile.am \
-	example/multi_type_vector/basic.cpp \
-	example/multi_type_vector/custom_value_types.cpp \
-	example/multi_type_vector/custom_value_types_custom_store.cpp \
-	example/multi_type_vector/debug_trace.cpp \
-	example/multi_type_vector/element_block1.cpp \
-	example/multi_type_vector/event1.cpp \
-	example/multi_type_vector/mtv_collection.cpp \
-	example/multi_type_vector/pos_hint.cpp \
-	example/multi_type_vector/standard_custom_store.cpp \
-	example/packed_trie_map.cpp \
-	example/packed_trie_state_custom.cpp \
-	example/packed_trie_state_int.cpp \
-	example/point_quad_tree.cpp \
-	example/rtree_erase.cpp \
-	example/rtree_medium.cpp \
-	example/rtree_medium_bulkload.cpp \
-	example/rtree_simple.cpp \
-	example/segment_tree.cpp \
-	example/sorted_string_map.cpp \
-	example/trie_map.cpp \
 	misc/gdb/mdds/__init__.py \
 	misc/matrix_perf.cpp \
 	misc/mdds.pc.in \
+	misc/mdds.pc.in.license \
+	misc/mtv_clone_noncopyable.cpp \
+	misc/mtv_copy_blocks.cpp \
 	misc/sorted_string_data.dat \
+	misc/sorted_string_data.dat.license \
 	misc/sorted_string_map_perf.cpp
 
 install-data-local:
