Add a simple test case for version number macros
Also add the version.hpp header file to Makefile.am which I forgot
to do in my last commit & make it SPDX compliant again.

--- a/include/mdds/Makefile.am
+++ b/include/mdds/Makefile.am
@@ -30,4 +30,5 @@ headers_HEADERS = \
 	sorted_string_map.hpp \
 	trie_map_def.inl \
 	trie_map.hpp \
-	trie_map_itr.hpp
+	trie_map_itr.hpp \
+	version.hpp
