--- a/include/mdds/version.hpp.in
+++ b/include/mdds/version.hpp.in
@@ -4,7 +4,7 @@
 
 #pragma once
 
-#define MDDS_VERSION "@VERSION@"
+#define MDDS_VERSION "@MDDS_VERSION@"
 #define MDDS_VERSION_MAJOR @MDDS_VERSION_MAJOR@
 #define MDDS_VERSION_MINOR @MDDS_VERSION_MINOR@
 #define MDDS_VERSION_MICRO @MDDS_VERSION_MICRO@
