Set up version.hpp generation in CMake build too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,17 @@
 cmake_minimum_required(VERSION 3.12)
 cmake_policy(SET CMP0048 NEW)
 
+set(MDDS_API_VERSION_MAJOR 3)
+set(MDDS_API_VERSION_MINOR 0)
+set(MDDS_API_VERSION "${MDDS_API_VERSION_MAJOR}.${MDDS_API_VERSION_MINOR}")
+message(STATUS "API version: ${MDDS_API_VERSION}")
+
 project(mdds VERSION 3.2.0 LANGUAGES CXX)
-set(API_VERSION 3.0)
+set(MDDS_VERSION "${mdds_VERSION}")
+set(MDDS_VERSION_MAJOR ${mdds_VERSION_MAJOR})
+set(MDDS_VERSION_MINOR ${mdds_VERSION_MINOR})
+set(MDDS_VERSION_MICRO ${mdds_VERSION_PATCH})  # NB: PATCH -> MICRO
+message(STATUS "mdds version: ${MDDS_VERSION}")
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(Boost)
@@ -27,8 +36,14 @@ if(MSVC)
     add_definitions(/wd4251 /wd4275 /wd4244 /MP)
 endif(MSVC)
 
+configure_file(
+    ${PROJECT_SOURCE_DIR}/include/mdds/version.hpp.in
+    ${CMAKE_CURRENT_BINARY_DIR}/include/mdds/version.hpp
+)
+
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_BINARY_DIR}/include
     ${Boost_INCLUDE_DIR}
 )
 
@@ -36,7 +51,8 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 
 install(DIRECTORY
     ${PROJECT_SOURCE_DIR}/include/mdds
-    DESTINATION include/mdds-${API_VERSION}
+    ${CMAKE_CURRENT_BINARY_DIR}/include/mdds
+    DESTINATION include/mdds-${MDDS_API_VERSION}
     FILES_MATCHING
         PATTERN "*.hpp"
         PATTERN "*.inl"
